[project]
name = "dwb-orders"
version = "0.1.0"
description = "Fetch orders from the Digital Waybill API and save each as a JSON file."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alfonso Arce" }]
dependencies = [
    "pdfplumber>=0.11.8",
    "rapidfuzz>=3.13.0",
    "tqdm>=4.67",
    "usaddress-scourgify>=0.6.0",
    "xlsxwriter>=3.2.9",
]

[tool.uv]
# This is an application, not a distributable package.
package = false
